# fakelua

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  GEMINI.md  LICENSE  PHASE1_PROGRESS.md  PHASE2_PROGRESS.md  PHASE3_PROGRESS.md  PHASE4_PROGRESS.md  PHASE5_PROGRESS.md  PHASE6_PROGRESS.md  PROGRESS.md  README.md  SSA_MIGRATION_PROGRESS.md  SSA_PIPELINE_STATUS.md  UNIFIED_SSA_PIPELINE.md  UNIFIED_SSA_PIPELINE_PLAN.md  c_gen.cpp.gcov  c_gen.h.gcov  compile_common.h.gcov  coverage.info  coverage_filtered.info  coverage_src.info  debug.h.gcov  extract_names.py  names.txt  native_var_scope.h.gcov  refactor.py  state.h.gcov  string_util.h.gcov  syntax_tree.h.gcov  type_inferencer.cpp.gcov  type_inferencer.h.gcov
benchmark/: CMakeLists.txt  README.md  benchmark.lua  benchmark_algo.cpp  benchmark_common.cpp  benchmark_cpp.cpp  benchmark_fakelua.cpp  benchmark_lua.cpp  benchmark_table.cpp  benchmark_var.cpp  fbenchmark.h  main.cpp
benchmark/lua/algo/: fibonacci.lua
benchmark/lua/bench_algo/: fibonacci.lua
cmd/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  README.md  fakelua.cpp  fakelua.h  fakelua.rs  lex.rs  lib.rs  object.rs  state.cpp  state.h  zio.rs
src/bison/: build.sh  parser.cpp  parser.gv  parser.h  parser.html  parser.xml  parser.y
src/compile/: README.md  c_gen.cpp  c_gen.h  c_runtime_header.h  cfg.cpp  cfg.h  compile_common.cpp  compile_common.h  compiler.cpp  compiler.h  func_body_compiler.cpp  func_body_compiler.h  hm_type.cpp  hm_type.h  inferred_type.h  my_flexer.cpp  my_flexer.h  myflexer.cpp  myflexer.h  native_var_scope.h  param_numeric_analyzer.cpp  param_numeric_analyzer.h  preprocessor.cpp  preprocessor.h  semantic_analysis.cpp  semantic_analysis.h  shape_type.h  ssa.cpp  ssa.h  syntax_tree.cpp  syntax_tree.h  type_environment.cpp  type_environment.h  type_inferencer.cpp  type_inferencer.h  unified_type_analyzer.cpp  unified_type_analyzer.h
src/compile/bison/: build.sh  location.hh  parser.cpp  parser.gv  parser.h  parser.html  parser.xml  parser.y
src/compile/flex/: build.sh  scanner.cpp  scanner.l
src/compile/infer/: cfg.cpp  hm_type.cpp  hm_type.h  inferred_type.h  shape_type.h  specialization_analyzer.cpp  specialization_analyzer.h  ssa.cpp  ssa.h  unified_type_analyzer.cpp  unified_type_analyzer.h
src/compile/type_inference/: hm_type.cpp  hm_type.h  shape_type.h  type_inferencer.cpp  unified_type_analyzer.cpp  unified_type_analyzer.h
src/fakelua/: fakelua.cpp  fakelua.h
src/flex/: build.sh  scanner.cpp  scanner.l
src/internal/: config.cpp  config.h  err.cpp  err.h  fakelua.cpp  gc.cpp  gc.h  gcobject.cpp  gcobject.h  location.cpp  location.h  object.cpp  object.h  parser.cpp  parser.h  state.cpp  state.h  stringheap.cpp  stringheap.h  tester.cpp  tester.h  token.cpp  token.h  types.cpp  types.h  variant.cpp  variant.h
src/internal/flex/: gen.sh  lua.l
src/interpreter/: interpreter.cpp  interpreter.h  vm.cpp
src/jit/: gcc_handle.cpp  gcc_handle.h  gcc_jit.cpp  gcc_jit.h  gcc_jit_handle.cpp  gcc_jit_handle.h  jit_common.h  preprocessor.cpp  preprocessor.h  tcc_handle.cpp  tcc_handle.h  tcc_jit.cpp  tcc_jit.h  vm.cpp  vm.h  vm_function.h
src/platform/: FlexLexer.h  executable_memory.h  libgccjit++.h  lua.hpp
src/platform/tinycc/: TODO  arm64-gen.c  c67-gen.c  configure  i386-asm.c  i386-gen.c  i386-link.c  libtcc.c  optclash  riscv64-asm.c  riscv64-gen.c  riscv64-link.c  riscv64-tok.h  tcc-doc.texi  tcc.c  tcc.h  tccasm.c  tccdbg.c  tccelf.c  tccgen.c  tccpp.c  tccrun.c  tcctok.h  tcctools.c  x86_64-gen.c  x86_64-link.c
src/state/: State.h  const_string.cpp  const_string.h  fakelua.cpp  heap.cpp  heap.h  stack.cpp  stack.h  state.cpp  state.h  var.cpp  var.h  var_pool.cpp  var_pool.h  var_string_heap.cpp  var_string_heap.h  var_table_heap.cpp  var_table_heap.h
src/util/: call_helper.h  common.h  concurrent_hashmap.h  concurrent_vector.h  const_define.h  copyable.h  debug.cpp  debug.h  dispatch_macro.h  dispatch_macro_undef.h  exception.cpp  exception.h  file_util.cpp  file_util.h  hash_func.h  logging.cpp  logging.h  macro.h  no_copy.h  number_util.h  os.cpp  os.h  rich_hashmap.h  string_util.cpp  string_util.h
src/var/: Var.h  var.cpp  var.h  var_closure.h  var_multi.cpp  var_multi.h  var_string.cpp  var_string.h  var_string_index.h  var_table.cpp  var_table.h  var_type.h
test/: CMakeLists.txt  ftest.h  main.cpp  test.lua  test_algo.cpp  test_closure.cpp  test_common.cpp  test_exception.cpp  test_infer.cpp  test_ini.cpp  test_interpreter.cpp  test_jitter.cpp  test_lex.cpp  test_package.cpp  test_pipeline.cpp  test_runtime.cpp  test_state.cpp  test_synctax_tree.cpp  test_syntax_tree.cpp  test_util.cpp  test_var.cpp  test_vm_cvar_call.cpp
test/lua/: test_continue.lua  test_for_num.lua  test_if.lua  test_repeat.lua  test_string.lua  test_var_attr.lua  test_while.lua
test/lua/algo/: binary_search.lua  bubble_sort.lua  collatz.lua  factorize.lua  fast_pow.lua  fibonacci.lua  gcd.lua  insertion_sort.lua  matrix.lua  sieve.lua
test/lua/closure/: test_closure_counter.lua  test_closure_for_in.lua  test_closure_func_alias.lua  test_closure_generic_for_in.lua  test_closure_higher_order.lua  test_closure_loop.lua  test_closure_method_call.lua  test_closure_nested.lua  test_closure_recursion.lua  test_closure_shared.lua  test_closure_syntax_expr.lua
test/lua/exception/: test_binop_plus_error.lua  test_col_func_not_find_error.lua  test_col_func_type_error.lua  test_const_binop_bitand_error.lua  test_const_binop_bitor_error.lua  test_const_binop_double_slash_error.lua  test_const_binop_less_equal_error.lua  test_const_binop_less_error.lua  test_const_binop_mod_error.lua  test_const_binop_more_equal_error.lua  test_const_binop_plus_error.lua  test_const_binop_slash_error.lua  test_const_binop_xor_error.lua  test_const_define_duplicate.lua  test_const_define_no_match.lua  test_const_define_no_value.lua  test_const_no_init.lua  test_const_unop_bitnot_error.lua  test_const_unop_len_error.lua  test_dup_param_error.lua  test_duplicate_const_define_error.lua  test_for_in_exp_error.lua  (+25 more)
(+930 files in other folders)
