[package]
name = "fakelua"
version = "0.0.1"
authors = ["esrrhs"]
description = "Another LuaJIT implemented with Rust and GCC JIT "
documentation = "https://docs.rs/fakelua"
repository = "https://github.com/esrrhs/fakelua"
readme = "README.md"
keywords = ["lua"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
