cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(libfakelua)

aux_source_directory(compile/bison FAKELUA_SRC_LIST)
aux_source_directory(compile/flex FAKELUA_SRC_LIST)
aux_source_directory(./compile FAKELUA_SRC_LIST)
aux_source_directory(./state FAKELUA_SRC_LIST)
aux_source_directory(./util FAKELUA_SRC_LIST)
aux_source_directory(./fakelua FAKELUA_SRC_LIST)
aux_source_directory(./jit FAKELUA_SRC_LIST)
aux_source_directory(./var FAKELUA_SRC_LIST)
aux_source_directory(./ FAKELUA_SRC_LIST)
include_directories(./)
include_directories(../include)
include_directories(./platform)
if (WIN32)
    include_directories(./platform/third_party/prebuilt/win_x64/tinycc/libtcc)
endif ()
add_library(fakelua SHARED ${FAKELUA_SRC_LIST})

find_package(Threads REQUIRED)

if (WIN32)
    set(TCC_DLL_PATH "${CMAKE_CURRENT_SOURCE_DIR}/platform/third_party/prebuilt/win_x64/tinycc/libtcc.dll.a")
    set(TARGET_LIB ${TARGET_LIB} "${TCC_DLL_PATH}")
else()
    set(TARGET_LIB ${TARGET_LIB} tcc Threads::Threads)
    set(TARGET_LIB ${TARGET_LIB} dl m)
endif ()

if (USE_COV)
    set(TARGET_LIB ${TARGET_LIB} gcov)
endif ()

target_link_libraries(fakelua ${TARGET_LIB})
